# computing-at-scale-assignments-SB-2025

./: README.md
assignment0/: README.md  assignment0.md  main  main-script.cpp  makefile  matrix-matrix-product.cpp  matrix-matrix-product.hpp  matrix-vector-product.cpp  matrix-vector-product.hpp  matrix1.mtx  matrix2.mtx  matrix3.mtx  matrix4.mtx  matrix_matrix_product  matrix_vector_product  mmio.h  read-matrix-market.cpp  read-matrix-market.hpp  sample_MM_format  test.cpp  vector1.mtx  vector2.mtx  verification.md  write-matrix-market.cpp  write-matrix-market.hpp
assignment1/: CMakeLists.txt  GaussChebyshev.hpp  GaussLegendre.hpp  GaussLobatto.hpp  Integrate.cpp  Integrate.hpp  IntegrationRule.hpp  Polynomial.hpp  PolynomialIntegrate.cpp  PolynomialIntegrate.hpp  README.md  ScalarFunction.hpp  UnitTests.cpp  assignment1.md  main.cpp
